--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                 <input type="text" class="form-input phone-code"  data-vtype="regexp" data-regexp="/^[\d]{3,6}$/g" data-vmsg="身份证号格式有误" placeholder="纯数字3-6" required />
             </div>
             <div class="form-group">
+                <label for="phone-code">small input：</label>
+                <input type="text" class=" phone-code form-input"  data-vtype="regexp"  data-vmsg="非空项" style="width:200px" placeholder="small input" required />
+            </div>
+            <div class="form-group">
                 <label for="phone-code"></label>
                 <input type="button" class="form-input phone-code"  value="更新手机号提示" id="updateTip"/>
             </div>
