--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label for="phone-code">数字3-6：</label>
-                <input type="text" class="form-input phone-code"  data-vtype="regexp" data-regexp="/^[\d]{3,6}$/g" data-vmsg="身份证号格式有误" placeholder="纯数字3-6" required />
+                <input type="text" class="form-input phone-code"  data-vtype="regexp" data-regexp="/^[\d]{3,6}$/g" data-vmsg="格式有误" placeholder="纯数字3-6" required />
             </div>
             <div class="form-group">
                 <label for="phone-code">small input：</label>
@@ -53,6 +53,10 @@
             <div class="form-group">
                 <label for="phone-code"></label>
                 <input type="button" class="form-input phone-code"  value="更新手机号提示" id="updateTip"/>
+            </div>
+            <div class="form-group">
+                <label for="phone-code"></label>
+                <input type="button" class="form-input phone-code"  value="强制验证" id="forceValidate"/>
             </div>
 
         </form>
